--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,14 +1,15 @@
 AUTOMAKE_OPTIONS=foreign
 bin_PROGRAMS=emeralddb edb
 emeralddb_SOURCES=\
-    pmd/pmdMain.cpp pmd/pmdTcpListener.cpp \
+    pmd/pmdMain.cpp pmd/pmdTcpListener.cpp pmd/pmdOptions.cpp \
+    pmd/pmd.cpp \
     bson/src/bsonobj.cpp bson/src/util/json.cpp bson/src/oid.cpp \
     bson/src/lib/base64.cpp bson/src/lib/md5.cpp bson/src/lib/nonce.cpp \
     oss/ossSocket.cpp oss/ossPrimitiveFileOp.cpp \
     pd/pd.cpp
 
 edb_SOURCES=\
-   client/edb.cpp client/command.cpp client/commandFactory.cpp \
+    client/edb.cpp client/command.cpp client/commandFactory.cpp \
     bson/src/bsonobj.cpp bson/src/util/json.cpp bson/src/oid.cpp \
     bson/src/lib/base64.cpp bson/src/lib/md5.cpp bson/src/lib/nonce.cpp \
     oss/ossSocket.cpp oss/ossPrimitiveFileOp.cpp \
