--- a/src/Makefile
+++ b/src/Makefile
@@ -116,10 +116,10 @@ edb_LINK = $(CXXLD) $(edb_CXXFLAGS) $(CXXFLAGS) $(edb_LDFLAGS) \
 am_emeralddb_OBJECTS = emeralddb-pmdMain.$(OBJEXT) \
 	emeralddb-pmdTcpListener.$(OBJEXT) \
 	emeralddb-pmdOptions.$(OBJEXT) emeralddb-pmd.$(OBJEXT) \
-	emeralddb-bsonobj.$(OBJEXT) emeralddb-json.$(OBJEXT) \
-	emeralddb-oid.$(OBJEXT) emeralddb-base64.$(OBJEXT) \
-	emeralddb-md5.$(OBJEXT) emeralddb-nonce.$(OBJEXT) \
-	emeralddb-ossSocket.$(OBJEXT) \
+	emeralddb-pmdEDU.$(OBJEXT) emeralddb-bsonobj.$(OBJEXT) \
+	emeralddb-json.$(OBJEXT) emeralddb-oid.$(OBJEXT) \
+	emeralddb-base64.$(OBJEXT) emeralddb-md5.$(OBJEXT) \
+	emeralddb-nonce.$(OBJEXT) emeralddb-ossSocket.$(OBJEXT) \
 	emeralddb-ossPrimitiveFileOp.$(OBJEXT) emeralddb-pd.$(OBJEXT)
 emeralddb_OBJECTS = $(am_emeralddb_OBJECTS)
 emeralddb_DEPENDENCIES =
@@ -153,7 +153,8 @@ am__depfiles_remade = ./$(DEPDIR)/edb-base64.Po \
 	./$(DEPDIR)/emeralddb-oid.Po \
 	./$(DEPDIR)/emeralddb-ossPrimitiveFileOp.Po \
 	./$(DEPDIR)/emeralddb-ossSocket.Po ./$(DEPDIR)/emeralddb-pd.Po \
-	./$(DEPDIR)/emeralddb-pmd.Po ./$(DEPDIR)/emeralddb-pmdMain.Po \
+	./$(DEPDIR)/emeralddb-pmd.Po ./$(DEPDIR)/emeralddb-pmdEDU.Po \
+	./$(DEPDIR)/emeralddb-pmdMain.Po \
 	./$(DEPDIR)/emeralddb-pmdOptions.Po \
 	./$(DEPDIR)/emeralddb-pmdTcpListener.Po
 am__mv = mv -f
@@ -324,7 +325,7 @@ top_srcdir = .
 AUTOMAKE_OPTIONS = foreign
 emeralddb_SOURCES = \
     pmd/pmdMain.cpp pmd/pmdTcpListener.cpp pmd/pmdOptions.cpp \
-    pmd/pmd.cpp \
+    pmd/pmd.cpp pmd/pmdEDU.cpp \
     bson/src/bsonobj.cpp bson/src/util/json.cpp bson/src/oid.cpp \
     bson/src/lib/base64.cpp bson/src/lib/md5.cpp bson/src/lib/nonce.cpp \
     oss/ossSocket.cpp oss/ossPrimitiveFileOp.cpp \
@@ -475,6 +476,7 @@ include ./$(DEPDIR)/emeralddb-ossPrimitiveFileOp.Po # am--include-marker
 include ./$(DEPDIR)/emeralddb-ossSocket.Po # am--include-marker
 include ./$(DEPDIR)/emeralddb-pd.Po # am--include-marker
 include ./$(DEPDIR)/emeralddb-pmd.Po # am--include-marker
+include ./$(DEPDIR)/emeralddb-pmdEDU.Po # am--include-marker
 include ./$(DEPDIR)/emeralddb-pmdMain.Po # am--include-marker
 include ./$(DEPDIR)/emeralddb-pmdOptions.Po # am--include-marker
 include ./$(DEPDIR)/emeralddb-pmdTcpListener.Po # am--include-marker
@@ -722,6 +724,20 @@ emeralddb-pmd.obj: pmd/pmd.cpp
 #	$(AM_V_CXX)source='pmd/pmd.cpp' object='emeralddb-pmd.obj' libtool=no \
 #	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) \
 #	$(AM_V_CXX_no)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(emeralddb_CXXFLAGS) $(CXXFLAGS) -c -o emeralddb-pmd.obj `if test -f 'pmd/pmd.cpp'; then $(CYGPATH_W) 'pmd/pmd.cpp'; else $(CYGPATH_W) '$(srcdir)/pmd/pmd.cpp'; fi`
+
+emeralddb-pmdEDU.o: pmd/pmdEDU.cpp
+	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(emeralddb_CXXFLAGS) $(CXXFLAGS) -MT emeralddb-pmdEDU.o -MD -MP -MF $(DEPDIR)/emeralddb-pmdEDU.Tpo -c -o emeralddb-pmdEDU.o `test -f 'pmd/pmdEDU.cpp' || echo '$(srcdir)/'`pmd/pmdEDU.cpp
+	$(AM_V_at)$(am__mv) $(DEPDIR)/emeralddb-pmdEDU.Tpo $(DEPDIR)/emeralddb-pmdEDU.Po
+#	$(AM_V_CXX)source='pmd/pmdEDU.cpp' object='emeralddb-pmdEDU.o' libtool=no \
+#	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) \
+#	$(AM_V_CXX_no)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(emeralddb_CXXFLAGS) $(CXXFLAGS) -c -o emeralddb-pmdEDU.o `test -f 'pmd/pmdEDU.cpp' || echo '$(srcdir)/'`pmd/pmdEDU.cpp
+
+emeralddb-pmdEDU.obj: pmd/pmdEDU.cpp
+	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(emeralddb_CXXFLAGS) $(CXXFLAGS) -MT emeralddb-pmdEDU.obj -MD -MP -MF $(DEPDIR)/emeralddb-pmdEDU.Tpo -c -o emeralddb-pmdEDU.obj `if test -f 'pmd/pmdEDU.cpp'; then $(CYGPATH_W) 'pmd/pmdEDU.cpp'; else $(CYGPATH_W) '$(srcdir)/pmd/pmdEDU.cpp'; fi`
+	$(AM_V_at)$(am__mv) $(DEPDIR)/emeralddb-pmdEDU.Tpo $(DEPDIR)/emeralddb-pmdEDU.Po
+#	$(AM_V_CXX)source='pmd/pmdEDU.cpp' object='emeralddb-pmdEDU.obj' libtool=no \
+#	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) \
+#	$(AM_V_CXX_no)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(emeralddb_CXXFLAGS) $(CXXFLAGS) -c -o emeralddb-pmdEDU.obj `if test -f 'pmd/pmdEDU.cpp'; then $(CYGPATH_W) 'pmd/pmdEDU.cpp'; else $(CYGPATH_W) '$(srcdir)/pmd/pmdEDU.cpp'; fi`
 
 emeralddb-bsonobj.o: bson/src/bsonobj.cpp
 	$(AM_V_CXX)$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(emeralddb_CXXFLAGS) $(CXXFLAGS) -MT emeralddb-bsonobj.o -MD -MP -MF $(DEPDIR)/emeralddb-bsonobj.Tpo -c -o emeralddb-bsonobj.o `test -f 'bson/src/bsonobj.cpp' || echo '$(srcdir)/'`bson/src/bsonobj.cpp
@@ -1139,6 +1155,7 @@ distclean: distclean-am
 	-rm -f ./$(DEPDIR)/emeralddb-ossSocket.Po
 	-rm -f ./$(DEPDIR)/emeralddb-pd.Po
 	-rm -f ./$(DEPDIR)/emeralddb-pmd.Po
+	-rm -f ./$(DEPDIR)/emeralddb-pmdEDU.Po
 	-rm -f ./$(DEPDIR)/emeralddb-pmdMain.Po
 	-rm -f ./$(DEPDIR)/emeralddb-pmdOptions.Po
 	-rm -f ./$(DEPDIR)/emeralddb-pmdTcpListener.Po
@@ -1211,6 +1228,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f ./$(DEPDIR)/emeralddb-ossSocket.Po
 	-rm -f ./$(DEPDIR)/emeralddb-pd.Po
 	-rm -f ./$(DEPDIR)/emeralddb-pmd.Po
+	-rm -f ./$(DEPDIR)/emeralddb-pmdEDU.Po
 	-rm -f ./$(DEPDIR)/emeralddb-pmdMain.Po
 	-rm -f ./$(DEPDIR)/emeralddb-pmdOptions.Po
 	-rm -f ./$(DEPDIR)/emeralddb-pmdTcpListener.Po
